syntax="proto3";

package user.auth;

enum EntityType{
    ENTITY_UNSPECIFIED=0;
    ENTITY_BUSINESS=1;
    ENTITY_BENEFICIARY=2;
    ENTITY_CONSUMER=3;
}
